--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@ pom.xml.asc
 *jar
 /lib/
 /classes/
+/targets/
 /target/
-/checkouts/
 .lein-deps-sum
 .lein-repl-history
-.lein-plugins/
 .lein-failures
+.nrepl-port
+.shell_history
+*.log
