:ambulance: Fix race condition in builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,14 @@ deploy:
     script: lein deploy
     on:
       branch: master
+      jdk: oraclejdk8
   # Generate documentation
   - provider: script
     skip_cleanup: true
     script: lein codox
     on:
       branch: master
+      jdk: oraclejdk8
   # Deploy documentation
   - provider: pages
     skip_cleanup: true
@@ -38,3 +40,4 @@ deploy:
     local_dir: target/doc
     on:
       branch: master
+      jdk: oraclejdk8
