--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,16 @@ pom.xml.asc
 /classes/
 /targets/
 /target/
-.lein-deps-sum
-.lein-repl-history
-.lein-failures
 .cpcache/
 .nrepl-port
 .shell_history
 *.log
+uberjar/
+/config.edn
+.rebel_readline_history
+.eastwood
+attic
+resources/logback-test.xml
+.clj-kondo/.cache
+.lein-failures
+greplace-test-*.txt
