--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,17 +16,17 @@ jobs:
     if: ${{ needs.skip_check.outputs.should_skip != 'true' }}
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        java-version: [ 8, 11, 17 ]
+
     steps:
       - uses: actions/checkout@v2
-
-      - name: Install Java LTS
-        uses: actions/setup-java@v2
+      - uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
-          java-version: 11
-
-      - name: Install Clojure CLI
-        uses: DeLaGuardo/setup-clojure@3.5
+          java-version: ${{ matrix.java-version }}
+      - uses: DeLaGuardo/setup-clojure@3.5
         with:
           tools-deps: latest
 
