--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,14 @@ jobs:
         java-version: [ 8, 11, 17 ]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: ${{ matrix.java-version }}
       - uses: DeLaGuardo/setup-clojure@4.0
         with:
-          tools-deps: latest
+          cli: latest
       - uses: actions/cache@v2
         with:
           path: |
